--- a/PartyHub_Project/static/css/Tickets_css/ticket_create.css
+++ b/PartyHub_Project/static/css/Tickets_css/ticket_create.css
@@ -72,3 +72,14 @@
     background-color: #c53030;
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
 }
+
+.no-ticket-message {
+    margin-top: 20px;
+    padding: 15px;
+    background-color: #ffefc3;
+    border: 2px solid #ffad33;
+    border-radius: 8px;
+    font-size: 18px;
+    color: #5a5a5a;
+    text-align: center;
+}
