--- a/PartyHub_Project/templates/Accounts/profile_details.html
+++ b/PartyHub_Project/templates/Accounts/profile_details.html
@@ -28,7 +28,7 @@
         <div class="profile-links">
             <p> <a href="{% url 'following_list' user.pk %}">{{ user.get_following.count }} Following</a></p>
             <p> <a href="{% url 'followers_list' user.pk %}">{{ user.get_followers.count }} Followers</a></p>
-            <p> <a href="">{{ user.tickets.count }} Tickets</a></p>
+            <p> <a href="">{{ user.get_valid_tickets.count }} Tickets</a></p>
 {#            {% if live_party %}#}
 {#            <p> <a href="">{{ live_party.title }} Yes</a></p>#}
 {#                {% else %}#}
