--- a/PartyHub_Project/templates/Party/party_details.html
+++ b/PartyHub_Project/templates/Party/party_details.html
@@ -22,7 +22,7 @@
             <p><strong>Location:</strong> {{ party.location }}</p>
             <p><strong>Organizer:</strong> {{ party.organizer.username }}</p>
             <p><strong>Description:</strong> {{ party.description }}</p>
-{#            <p><strong>Attendees:</strong> {{ party.attendees.count }} people</p>#}
+            <p><strong>Attendees:</strong> {{ party.tickets.count }} people</p>
             
             <!-- Бутон за участие или напускане на партито -->
             {% if user.is_authenticated %}
@@ -30,7 +30,7 @@
                     <a href="{% url 'delete_party' party.slug %}" class="details-link">Delete Party</a>
                     {% if can_buy %}
                         <a href="{% url 'edit_party' party.slug %}" class="details-link">Edit Party</a>
-                        {% endif %}
+                    {% endif %}
 
                 {% else %}
                     {% if can_buy %}
