--- a/PartyHub_Project/templates/Accounts/profile_edit.html
+++ b/PartyHub_Project/templates/Accounts/profile_edit.html
@@ -8,10 +8,42 @@
         <h2>Edit Your Profile</h2>
         
         <!-- Формата за редактиране на профила -->
-        <form method="post" enctype="multipart/form-data">
+        <form method="post" enctype="multipart/form-data" class="profile-edit-form">
             {% csrf_token %}
-            {{ form.as_div }}
-            <button>Confirm</button>
+
+            <div class="form-group">
+                <!-- Потребителско име -->
+                <label for="id_username">Username</label>
+                {{ form.username }}
+            </div>
+
+            <div class="form-group">
+                <!-- Име -->
+                <label for="id_first_name">First Name</label>
+                {{ form.first_name }}
+            </div>
+
+            <div class="form-group">
+                <!-- Фамилно име -->
+                <label for="id_last_name">Last Name</label>
+                {{ form.last_name }}
+            </div>
+
+            <div class="form-group" id="picture-form-id">
+                <!-- Профилна снимка -->
+                <label for="id_profile_picture">Profile Picture</label>
+                <p>{{ form.profile_picture }}</p>
+            </div>
+
+            <div class="form-group">
+                <!-- Биография -->
+                <label for="id_bio">Bio</label>
+                {{ form.bio }}
+            </div>
+
+            <button type="submit" class="btn btn-primary">Confirm</button>
         </form>
     </div>
+    <script src="{% static 'js/remove_picture_link.js' %}"></script>
+
 {% endblock %}
