fixed pictures bugs

--- a/PartyHub_Project/static/css/Accounts_css/profile_details.css
+++ b/PartyHub_Project/static/css/Accounts_css/profile_details.css
@@ -171,3 +171,8 @@
         margin-top: 15px;
     }
 }
+/* Стилизация на името и фамилията */
+.profile-info .name {
+    font-size: 18px;
+    color: #555;
+}
