--- a/PartyHub_Project/templates/Party/user_parties.html
+++ b/PartyHub_Project/templates/Party/user_parties.html
@@ -13,13 +13,13 @@
             {% for party in upcoming_parties %}
                 <div class="party-card">
                     {% if party.image %}
-                        <img src="{{ party.image.url }}" alt="Party Image" class="party-image">
+                        <img src="{{ party.picture.url }}" alt="Party Image" class="party-image">
                     {% else %}
-                        <img src="{% static 'default_party_image.jpg' %}" alt="Default Party Image" class="party-image">
+                        <img src="{% static 'images/img.png' %}" alt="Default Party Image" class="party-image">
                     {% endif %}
                     <div class="party-details">
-                        <h3>{{ party.name }}</h3>
-                        <p><strong>Date:</strong> {{ party.date }}</p>
+                        <h3>{{ party.title }}</h3>
+                        <p><strong>Party start:</strong> {{ party.start_time }}</p>
                         <p><strong>Location:</strong> {{ party.location }}</p>
                         <p>{{ party.description|truncatewords:20 }}</p>
                         <a href="{% url 'details_party' party.slug %}" class="details-link">View Details</a>
@@ -34,7 +34,7 @@
                     {% if party.image %}
                         <img src="{{ party.image.url }}" alt="Party Image" class="party-image">
                     {% else %}
-                        <img src="{% static 'default_party_image.jpg' %}" alt="Default Party Image" class="party-image">
+                        <img src="{% static 'images/img.png' %}" alt="Default Party Image" class="party-image">
                     {% endif %}
                     <div class="party-details">
                         <h3>{{ party.name }}</h3>
@@ -48,7 +48,7 @@
             {% endfor %}
         </div>
     {% else %}
-        <p>You haven't created any parties yet.</p>
+        <p>"Looks like you're still keeping things low-key... How about throwing the most epic party ever? 😎"</p>
     {% endif %}
 </div>
 {% endblock %}
